Overflow fixat

--- a/CSS-filer/footer.css
+++ b/CSS-filer/footer.css
@@ -9,7 +9,6 @@
 
 footer {
     background-color: rgba(128, 128, 128, 0.5);
-    width: 100vw;
     height: 150px;
     bottom: 0%;
     left: 0%;
