--- a/CSS-filer/startsida.css
+++ b/CSS-filer/startsida.css
@@ -82,7 +82,6 @@ body {
     justify-content: center;
     align-items: center;
     height: fit-content;
-    width: 90vw;
     margin-left: 140px;
     gap: 20px;
     margin-top: 50px;
